tests/models/struct/unnamed/usize/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    usize
);
fn main() {}
